borsh-derive-internal/src/snapshots/borsh_derive_internal__enum_ser__tests__bound_generics.snap
---
source: borsh-derive-internal/src/enum_ser.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Key, V, U> borsh::ser::BorshSerialize for A<K, V, U>
where
    V: Value,
    K: borsh::ser::BorshSerialize,
    V: borsh::ser::BorshSerialize,
    U: borsh::ser::BorshSerialize,
{
    fn serialize<W: borsh::__private::maybestd::io::Write>(
        &self,
        writer: &mut W,
    ) -> ::core::result::Result<(), borsh::__private::maybestd::io::Error> {
        let variant_idx: u8 = match self {
            A::B { .. } => 0,
            A::C(..) => 0 + 1,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            A::B { x, y, .. } => {
                borsh::BorshSerialize::serialize(x, writer)?;
                borsh::BorshSerialize::serialize(y, writer)?;
            }
            A::C(id0, id1) => {
                borsh::BorshSerialize::serialize(id0, writer)?;
                borsh::BorshSerialize::serialize(id1, writer)?;
            }
        }
        Ok(())
    }
}

